--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -13,7 +13,7 @@ form.search {
         align-items: center;
 
         h3 {
-            margin: 0 20px 0;
+            margin: 0 20px;
             color: var(--rpe-dark-purple);
         }
 
