added pardot script above the chat script (#404)
* added pardot script above the chat script

* allow hero h1 to get color overrides

* putting the dark colors back for the blog

* fixed a case for when there is an image in background

---------

Co-authored-by: Charity Helms <chelms@adobe.com>

--- a/blocks/related-posts/related-posts.css
+++ b/blocks/related-posts/related-posts.css
@@ -16,10 +16,11 @@
             line-height: 1.45;
             margin-bottom: 1em;
             font-family: var(--body-font-family);
+            color: var(--blog-blue);
         }
 
         a h3:hover {
-            color: var(--theme-heading-color);
+            color: var(--blog-blue);
             text-decoration: underline;
         }
     }
