--- a/blocks/blogs-filter/blogs-filter.css
+++ b/blocks/blogs-filter/blogs-filter.css
@@ -3,7 +3,7 @@
     font-weight: bold;
     text-transform: uppercase;
     padding: 0 50px 0 20px;
-    margin: 3% 0;
+    margin-bottom: 3%;
     color: var(--dark-gray);
     background-color: white;
     height: 40px;
