--- a/styles/styles.css
+++ b/styles/styles.css
@@ -528,6 +528,25 @@ main > .section-outer {
  }
 }
 
+.section.sitemap {
+  ul {
+    margin-bottom: 15px;
+    border-left: 3px solid #11b4e440;
+    margin-left: 0;
+    padding-left: 25px;
+  }
+
+  li {
+    width: 100%;
+    float: none;
+    display: inline-block;
+  }
+
+  h3 {
+    margin-bottom: 50px;
+  }
+}
+
 main > .section:first-of-type {
   margin-top: 0;
 }
