--- a/blocks/cards/cards-cirlce-image.css
+++ b/blocks/cards/cards-cirlce-image.css
@@ -78,6 +78,12 @@
         display: flex;
         position: relative;
         flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .card .card-body .card-heading{
+        color: var(--laz-logo-blue);
+        text-transform: uppercase;
     }
 
     .card .card-body h3 {
