--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -85,7 +85,8 @@
   margin: 0;
   padding: 0;
   border-radius: 50%;
-  background-color: var(--light-gray);
+  background-color: var(--text-color);
+  opacity: .3;
   transition: background-color 0.2s;
   border: none;
 }
@@ -94,6 +95,7 @@
 .carousel .carousel-slide-indicator button:hover,
 .carousel .carousel-slide-indicator button:focus-visible {
   background-color: var(--text-color);
+  opacity: 1;
 }
 
 .carousel .carousel-navigation-buttons {
@@ -107,12 +109,12 @@
 /* stylelint-disable-next-line no-descending-specificity */
 .carousel .carousel-navigation-buttons button {
   position: relative;
-  width: 75px;
-  height: 75px;
+  width: 55px;
+  height: 55px;
   margin: 0;
   border-radius: 50%;
   padding: 0;
-  background-color: #dadada;
+  background-color: var(--theme-carousel-arrow);
   transition: background-color 0.2s;
   color: white;
   border: none;
@@ -120,19 +122,19 @@
 
 .carousel .carousel-navigation-buttons button:hover,
 .carousel .carousel-navigation-buttons button:focus-visible {
-  background-color: #cdcdcd;
+  filter: brightness(0.9);
 }
 
 .carousel .carousel-navigation-buttons button::after {
   display: block;
   content: '';
-  border: 8px solid;
+  border: 7px solid;
   cursor: pointer;
   border-radius: 20%;
   border-bottom: 0;
   border-left: 0;
-  height: 30px;
-  width: 30px;
+  height: 25px;
+  width: 25px;
   position: absolute;
   top: 50%;
   left: calc(50% + 4px);
@@ -144,23 +146,49 @@
   left: calc(50% - 4px);
 }
 
-.carousel.white {
-  background: var(--white);
-  color: var(--text-color);
-  padding: 20px 0;
-  border-radius: 50px;
-  margin-bottom: 40px;
-
-  .carousel-slide-content p {
-    font-weight: var(--font-weight-light);
-    font-size: var(--body-font-size-s);
-  }
-}
-
 .carousel.featured {
+  .carousel-navigation-buttons {
+    max-width: 500px;
+    margin: auto;
+    top: -50px;
+  }
+
   & p>strong {
     color: var(--bright-blue);
     font-size: var(--body-font-size-m);
+  }
+}
+
+.carousel.support {
+  color: var(--text-color);
+
+  .carousel-slide {
+    background: white;
+    text-align: center;
+    border-radius: 20px;
+    padding: 4em;
+    margin: 2em 1em;
+
+    .carousel-slide-image {
+      align-self: flex-start;
+
+      picture {
+      height: unset;
+      }
+    }
+
+    h3 {
+        font-size: 1.4em;
+      font-weight: var(--font-weight-bold);
+        line-height: 1.4;
+      margin-bottom: 1.4em;
+      color: var(--theme-carousel-h3);
+    }
+
+    a, a:any-link {
+      color: var(--text-color);
+      text-decoration: underline;
+    }
   }
 }
 
@@ -233,6 +261,10 @@
         font-weight: var(--font-weight-bold);
         line-height: 1.4;
       }
+
+      a, a:any-link {
+        color: var(--text-color);
+      }
     }
 
     .button-container {
@@ -250,6 +282,54 @@
 
   .arrow { display: none; }
 }
+
+.carousel.testimonial {
+  background: var(--white);
+  color: var(--text-color);
+  padding: 20px 0;
+  border-radius: 50px;
+  margin-bottom: 40px;
+
+  .carousel-slide {
+    flex-direction: row;
+    padding-left: 30px;
+    padding-right: 30px;
+    justify-content: unset;
+    gap: 24px;
+    margin: 0;
+
+    .carousel-slide-content {
+      display: block;
+      flex: 1;
+
+      p {
+        font-weight: var(--font-weight-light);
+        font-size: var(--body-font-size-s);
+      }
+    }
+
+    .carousel-slide-image {
+      width: 10%;
+
+      picture {
+        height: unset;
+
+        > img {
+          object-fit: unset;
+          height: unset;
+        }
+      }
+    }
+  }
+
+  .carousel-navigation-buttons {
+    margin-top: -50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    top: 0;
+  }
+}
+
 
 @media (width >= 768px) {
   .carousel:not(.card-links) {
@@ -292,6 +372,43 @@
     }
   }
 
+  .carousel.testimonial {
+    padding: 50px 0 30px;
+
+    .carousel-navigation-buttons {
+      padding-left: 10px;
+      padding-right: 10px;
+      transform: translateY(-300%);
+    }
+
+    .carousel-slide {
+      padding-left: 100px;
+      padding-right: 100px;
+      gap: 50px;
+
+      .carousel-slide-image {
+        width: 55%;
+      }
+
+      .carousel-slide-content {
+        flex: 0 100%;
+      }
+    }
+  }
+
+  .carousel.support {
+    .carousel-slides-container {
+      width: 980px;
+      margin: auto;
+
+      .carousel-slide {
+        flex: 0 0 48%;
+        padding: 4em 3.5em !important;
+      }
+    }
+
+  }
+
   .carousel.card-links {
     .carousel-slides-container {
       width: 780px;
@@ -301,6 +418,10 @@
 }
 
 @media (width >= 1200px) {
+  .carousel .carousel-slides {
+    margin-left: 10px;
+  }
+
   .carousel.card-links {
     .carousel-slides-container {
       width: 980px;
@@ -318,6 +439,7 @@
       gap: 66px;
       padding-left: 80px;
       padding-right: 80px;
+      margin-bottom: 16px;
 
       .carousel-slide-content {
         align-items: start;
@@ -365,19 +487,73 @@
       }
     }
   }
-}
 
-@media (width >= 1600px) {
-  .carousel:not(.card-links) {
+  .carousel.testimonial {
+    .carousel-navigation-buttons {
+      transform: translateY(-250%);
+
+      button.slide-prev {
+        left: 0;
+      }
+
+      button.slide-next {
+        right: 0;
+      }
+    }
+
     .carousel-slide {
-        padding-left: 0;
-        padding-right: 0;
+      padding-left: 95px;
+      padding-right: 95px;
+
+      .carousel-slide-image picture img {
+        height: unset;
+      }
     }
   }
 
-  .carousel, .carousel:not(.featured) {
+  .carousel.support .carousel-slides-container {
+    width: 1100px;
+
+    .carousel-slides {
+      margin-left: 16px;
+    }
+
+    .carousel-slide {
+      flex: 0 0 31%;
+
+      .carousel-slide-image {
+        width: unset;
+
+        picture, picture img {
+          height: unset;
+        }
+      }
+    }
+  }
+
+  .carousel .carousel-navigation-buttons button {
+    width: 75px;
+    height: 75px;
+
+    &::after {
+        border: 10px solid;
+      border-bottom: 0;
+      border-left: 0;
+        height: 35px;
+        width: 35px;
+    }
+  }
+}
+
+@media (width >= 1600px) {
+  .carousel:not(.testimonial), .carousel.links {
     .carousel-slides-container {
       width: unset;
+
+      .carousel-slide {
+        padding-left: 0;
+        padding-right: 0;
+      }
     }
 
     .carousel-navigation-buttons {
