--- a/templates/homepage/homepage.css
+++ b/templates/homepage/homepage.css
@@ -19,13 +19,40 @@ main > .section-outer > .section, main > .section-outer > .bg-image-container >.
 
 .homepage .home-three-col > div:nth-child(1),
 .homepage .home-three-col > div:nth-child(3) {
-    flex: 20%;
+    flex: 25%;
     text-align: center;
 }
 
 .homepage .home-three-col > div:nth-child(2) {
     flex: 60%;
     text-align: center;
+}
+
+@media screen and (max-width: 1200px) {
+    .homepage .home-three-col {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .homepage .home-three-col > div{
+        width: 100%;
+    }
+
+    .flipcards {
+        flex-direction: row !important;
+    }
+
+    .homepage .home-three-col > div:nth-child(1){
+        order: 1;
+    }
+
+    .homepage .home-three-col > div:nth-child(3) {
+        order: 2;
+    }
+
+    .homepage .home-three-col > div:nth-child(2) {
+        order: 3;
+    }
 }
 
 .home-hero {
