--- a/templates/homepage/homepage.css
+++ b/templates/homepage/homepage.css
@@ -1,7 +1,3 @@
-main > .section-outer > .section, main > .section-outer > .bg-image-container >.section  {
-    max-width: 100%;
-}
-
 .home-hero {
     & h1, h2, p, a, a:any-link, li {
         color: white;
@@ -14,7 +10,7 @@ main > .section-outer > .section, main > .section-outer > .bg-image-container >.
     & p, li {
         font-size: var(--body-font-size-l);
         line-height: 28px;
-        font-weight: 500px !important;
+        font-weight: 500 !important;
     }
 
     .columns > div {
@@ -27,10 +23,6 @@ main > .section-outer > .section, main > .section-outer > .bg-image-container >.
 }
 
 @media screen and (width >= 1200px) {
-    main > .section-outer > .section, main > .section-outer > .bg-image-container >.section  {
-        max-width: 90%;
-    }
-
     .home-hero {
         .columns > div {
             display: flex;
@@ -38,5 +30,11 @@ main > .section-outer > .section, main > .section-outer > .bg-image-container >.
             padding: 0 0 10%;
             text-align: left;
         }
+    }
+}
+
+@media screen and (width >= 1600px) {
+    main > .section-outer > .section, main > .section-outer > .bg-image-container >.section  {
+        max-width: 1527px
     }
 }
