--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -111,6 +111,11 @@
     flex: 1 0 60%;
     position: relative;
 
+    .embed-wrapper {
+      width: 100%;
+      height: 100%;
+    }
+
     .tab-square-content {
       padding: 36px;
       background-color: white;
